Fix layout on mobiles & tablets

--- a/app/bundles/app/components/Comments/_Form.styl
+++ b/app/bundles/app/components/Comments/_Form.styl
@@ -37,3 +37,7 @@
       padding: .7rem 1rem
       border-radius: 0
       transition-duration: 0s
+
+      @media mqPhone
+        font-size: .8rem
+        padding: .5rem 1rem
