--- a/app/bundles/app/components/Header/Header.styl
+++ b/app/bundles/app/components/Header/Header.styl
@@ -14,10 +14,15 @@ header
     font-weight: 700
 
     @media mqPhone
-      font-size: 1.7rem
+      width: 100%
+      font-size: 1rem
 
     a
       padding: .5rem .9rem
       border: 0
       color: #fff
       background-color: $green
+
+      @media mqPhone
+        display: block
+        width: 100%
