--- a/app/bundles/app/components/Topbar/Topbar.styl
+++ b/app/bundles/app/components/Topbar/Topbar.styl
@@ -13,6 +13,9 @@
   #topbar__links-wrapper
     @extends $layout-section
 
+    @media mqPhone
+      min-width: 100px
+
     #topbar__auth-link
       #topbar__auth-link__login
       #topbar__auth-link__logout
